# mental-poker

./: .gitignore  Cargo.toml  README.md
examples/go-fish/: cards.rs  game.rs  main.rs  message.rs
examples/go-fish/player/: auto.rs  cli.rs  mod.rs
src/: deck.rs  lib.rs  util.rs
src/game/: log.rs  message.rs  mod.rs  trusting.rs
