[package]
name = "mental-poker"
version = "0.1.0"
edition = "2021"

[dependencies]
derivative="2.2"
derive_more="0.99"
either="1.6"
generic-array="0.14"
log="0.4"
rand="0.8"
sha2="0.10"
thiserror="1.0"

[dev-dependencies]
assert_matches="1.5"
either="1.6"
env_logger="0.9"
mockall = "0.11.0"
nom="7.1"
structopt="0.3"
test-log="0.2"
unwrap-infallible="0.1"